# openresponses-impl-client-google

./: .gitignore  README.md  README_JA.md  build.md  pyproject.toml  uv_add.sh
src/openresponses_impl_client_google/: __init__.py
src/openresponses_impl_client_google/client/: gemini_responses_client.py
src/openresponses_impl_client_google/utils/: gemini_response_model_util.py  google_response_model_util.py
test/builtin_tool/: test_builtin_tool.py
test/integration_test/client/: test_gemini_responses_client_live.py
test/unit_test/: test_gemini_hello.py
test/unit_test/client/: test_gemini_builtin_tool_request_shape.py  test_gemini_responses_client.py
test/unit_test/helpers/: response_payloads.py
test/unit_test/upload/: test_movie_upload.py
test/unit_test/utils/: test_gemini_response_model_util.py
